--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "jquery": "1.9.1 - 3",
+    "popper.js": "^1.14.7",
     "rxjs": "^6.5.2",
     "zone.js": "~0.9.1"
   },
